[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "multilora"
version = "0.1.0"
description = "A package for multi LoRA serving"
authors = [{name = "Viacheslav Surkov", email = "viacheslav.surkov@epf.ch"}]
license = {text = "MIT"}
dependencies = ["torch", "transformers"]
readme = "README.md"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["multilora"]